Fix button alignment in banner module

--- a/modules/banner/banner.index.scss
+++ b/modules/banner/banner.index.scss
@@ -16,7 +16,7 @@
       @include device-size('tablet') {
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
         flex-wrap: nowrap;
         gap: var(--inner-spacing-lg);
       }
